Fixed an overlap issue in the footer

--- a/wp-content/themes/nextstepmaine/sass/assets/_select-box.scss
+++ b/wp-content/themes/nextstepmaine/sass/assets/_select-box.scss
@@ -57,7 +57,7 @@ div.sbHolder {
 		top: 36px !important ; left: 0px !important ;
 		margin: 0; padding: 0;
 		width: 100% ;
-		z-index: 1;
+		z-index: 99;
 		overflow-y: auto !important ;
 		background-color: $medium-blue ;
 		@include single-box-shadow($medium-gray, 0, 3px, 8px, false, false);
